---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var f : real\nput 1 : 0 : f\n"
---
"f"@"src/main.t:4..5" [ConstVar(Var, No)]: real
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:25..26: mismatched types
| note for src/main.t:25..26: this is of type `real`
| info: `real` is not an integer type
